# latch-bench

./: Cargo.toml  README.md
benches/: loro_benchmarks.rs
dataset/: doc.json
examples/: parse.rs  table.rs
src/: latch_data.rs  lib.rs  main.rs
